--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ nav a:hover {
     color: var(--cyan);
 }
 
+#logo {
+    font-family: rig-solid-bold-fill, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
 #content {
     display: flex;
     justify-content: center;
@@ -229,6 +235,7 @@ hr {
 
     section {
         width: 90%;
+        margin-top: 9%;
     }
 
     #pfpic img {
